Fixed the issue that tabs are not correctly aligned in column

--- a/src/App.css
+++ b/src/App.css
@@ -734,6 +734,13 @@ td {
 /* News page */
 .submenu-tabs {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.submenu-tabs > button {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hidden {
